# dj-doom-panel

./: 404.html  MANIFEST.in  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: test.yml
configuration/: index.html
dj_doom_panel/: admin.py  apps.py  conf.py  models.py  panel.py  urls.py  views.py
dj_doom_panel/static/dj_doom_panel/: doom-shareware.jsdos
dj_doom_panel/static/dj_doom_panel/css/: styles.css
dj_doom_panel/templates/admin/dj_doom_panel/: base.html  index.html
dj_doom_panel/templates/admin/dj_doom_panel/partials/: welcome_graphic.html
docs/: configuration.md  index.md  installation.md
example_project/example_project/: asgi.py  settings.py  urls.py
installation/: index.html
search/: search_index.json
tests/: base.py  conftest.py  test_admin.py
